added simple vfx graph example with exposed property

--- a/GGJ20/Packages/manifest.json
+++ b/GGJ20/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "7.1.8",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.director": "1.0.0",
